--- a/src/App.css
+++ b/src/App.css
@@ -1,72 +1,179 @@
 /* Global Styles */
+h1 {
+  color: #fff;
+  font-size: 40px;
+  font-family: "Pacifico", cursive;
+}
+
+.pacificoBlueH2 {
+	color: #264653;
+	font-size: 32px;
+	font-family: "Pacifico", cursive;
+}
+
+.playerP {
+	font-family: "Pacifico", cursive;
+	font-size: 18px;
+	color: #264653;
+}
+
+/* Gradient Background  */
+.gradientBack {
+  background-image: linear-gradient(#264653, #2a9d8f, #f4a261);
+}
 
 /* Background */
 .gradientBack {
-    background-color: #264653;
-    text-align: center;
-    height: 100vh;
+  background-color: #000;
+  text-align: center;
+  height: 100vh;
 }
 
 /* Buttons */
 .orangeBtn {
-    background-color: #E76F51;
-    border-radius: 8px;
-    border-style: none;
-    padding: 16px 64px;
-    width: 340px;
-    margin: 48px auto;
-    color: #FFFFFF;
+  background-color: #e76f51;
+  border-radius: 8px;
+  border-style: none;
+  font-family: "Pacifico", cursive;
+  font-size: 24px;
+  padding: 8px 0px;
+  width: 350px;
+  color: #ffffff;
+  text-decoration: none;
 }
 .whiteLinkBtn {
-    color: #FFFFFF;
-    text-decoration: none;
+  color: #ffffff;
+  text-decoration: none;
+  font-family: "Quicksand", sans-serif;
+  font-size: 18px;
 }
 
-
-
-
+#bottomBtn {
+	margin-top: 504px;
+}
 
 /* CSS Reset */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 body {
-	line-height: 1;
+  line-height: 1;
 }
-ol, ul {
-	list-style: none;
+ol,
+ul {
+  list-style: none;
 }
-blockquote, q {
-	quotes: none;
+blockquote,
+q {
+  quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
