--- a/src/features/game_setup/gameSetup.css
+++ b/src/features/game_setup/gameSetup.css
@@ -1,12 +1,72 @@
 .gameSetupDiv {
-    height: 100vh;
-    text-align: center;
+  height: 100vh;
+  text-align: center;
 }
 
 .gameSetupH2 {
-    margin-top: 64px;
+  margin-top: 64px;
 }
 
 .gameSetupPlayerP {
-    
+}
+
+/* add/minus/players/rounds  */
+
+.playerNumbers {
+}
+
+.plusPlayer {
+  background: url(../../images/plus.png) no-repeat;
+  background-position: center;
+  cursor: pointer;
+  width: 10%;
+  height: 64px;
+  border-radius: 0px 8px 8px 0px;
+  border: 2px solid #2a9d8f;
+  border-left: 0;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.minusPlayer {
+  background: url(../../images/minus.png) no-repeat;
+  background-position: center;
+  cursor: pointer;
+  width: 10%;
+  height: 64px;
+  border-radius: 8px 0px 0px 8px;
+  border: 2px solid #2a9d8f;
+  border-right: 0;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.playerInput {
+  height: 62px;
+  width: 70%;
+  text-align: center;
+  font-size: 26px;
+  border: 2px solid #2a9d8f;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.playerInput:focus {
+  outline: #f4a261;
+  border-color: #f4a261;
+  /* box-shadow: 0 0 3px #000; */
+}
+
+.playerAndNumber {
+  display: block;
+  margin: 80px 24px 80px 24px;
+}
+
+.playerNumbers {
+    margin-top: 16px;
+}
+
+.playerP {
+    text-align: left;
+
 }
