--- a/src/App.css
+++ b/src/App.css
@@ -1,59 +1,3 @@
-/* Global Styles */
-h1 {
-  color: #fff;
-  font-size: 40px;
-  font-family: "Pacifico", cursive;
-}
-
-.pacificoBlueH2 {
-	color: #264653;
-	font-size: 32px;
-	font-family: "Pacifico", cursive;
-}
-
-.playerP {
-	font-family: "Pacifico", cursive;
-	font-size: 18px;
-	color: #264653;
-}
-
-/* Gradient Background  */
-.gradientBack {
-  background-image: linear-gradient(#264653, #2a9d8f, #f4a261);
-}
-
-/* Background */
-.gradientBack {
-  background-color: #000;
-  text-align: center;
-  height: 100vh;
-}
-
-/* Buttons */
-.orangeBtn {
-  background-color: #e76f51;
-  border-radius: 8px;
-  border-style: none;
-  font-family: "Pacifico", cursive;
-  font-size: 24px;
-  padding: 8px 0px;
-  width: 350px;
-  color: #ffffff;
-  text-decoration: none;
-}
-.whiteLinkBtn {
-  color: #ffffff;
-  text-decoration: none;
-  font-family: "Quicksand", sans-serif;
-  font-size: 18px;
-}
-
-#bottomBtn {
-  position: absolute;
-  top: 664px;
-  transform: translate(-50%, -50%);
-}
-
 /* CSS Reset */
 html,
 body,
@@ -178,4 +122,71 @@ q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0;
+}
+
+/* Global Styles */
+h1 {
+  color: #fff;
+  font-size: 40px;
+  font-family: "Pacifico", cursive;
+}
+
+.pacificoBlueH2 {
+  color: #264653;
+  font-size: 32px;
+  font-family: "Pacifico", cursive;
+}
+
+.pageLayoutContainer {
+  text-align: center;
+  margin: 0px 24px 0px 24px;
+  padding-top: 32px;
+  padding-bottom: 164px;
+}
+
+.playerP {
+  font-family: "Pacifico", cursive;
+  font-size: 18px;
+  color: #264653;
+}
+
+/* Gradient Background  */
+.gradientBack {
+  background-image: linear-gradient(#264653, #2a9d8f, #f4a261);
+}
+
+/* Background */
+.gradientBack {
+  background-color: #000;
+  text-align: center;
+  height: 100vh;
+}
+
+/* Buttons */
+.orangeBtn {
+  background-color: #e76f51;
+  border-radius: 8px;
+  border-style: none;
+  font-family: "Pacifico", cursive;
+  font-size: 24px;
+  padding: 8px 0px;
+  width: 100%;
+  color: #ffffff;
+  text-decoration: none;
+}
+.whiteLinkBtn {
+  color: #ffffff;
+  text-decoration: none;
+  font-family: "Quicksand", sans-serif;
+  font-size: 18px;
+}
+
+.bottomButtons {
+  position: fixed;
+  bottom: 0px;
+  left: 0;
+  right: 0;
+  padding: 32px 24px;
+  background-image: linear-gradient(180deg, rgba(255,255,255,0) 0, rgba(255,255,255,1) 100%, rgba(255,255,255,1) 100%);
+  /* look up linear gradient with multiple stops  */
 }
