--- a/src/features/intro/Intro.css
+++ b/src/features/intro/Intro.css
@@ -1,14 +1,15 @@
 .introContents {
-    height: 100vh;
-    margin: 0px 24px 0px 24px;
-
+    display: flex;
+    padding: 0px 24px 0px 24px;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
 }
 
 .dadJokesIntroH1 {
     color: #fff;
 	font-size: 48px;
     font-family: 'Pacifico', cursive;
-    padding-top: 280px;
 }
 
 .introH2 {
@@ -19,7 +20,6 @@
 }
 
 #introOrangeBtn {
-    margin-top: 216px;
 }
 
 .howItWorksP{
