--- a/src/App.css
+++ b/src/App.css
@@ -144,12 +144,6 @@ h1 {
   padding-bottom: 164px;
 }
 
-.playerP {
-  font-family: "Pacifico", cursive;
-  font-size: 18px;
-  color: #264653;
-}
-
 /* Gradient Background  */
 .gradientBack {
   background-image: linear-gradient(#264653, #2a9d8f, #f4a261);
@@ -190,3 +184,34 @@ h1 {
   background-image: linear-gradient(180deg, rgba(255,255,255,0) 0, rgba(255,255,255,1) 100%, rgba(255,255,255,1) 100%);
   /* look up linear gradient with multiple stops  */
 }
+
+#returnGreen {
+  color:#2a9d8f
+}
+
+/* Inputs  */
+
+
+.playerAndRoundsP {
+  font-family: "Quicksand", sans-serif;
+  margin: 24px 0px 0px;
+  color: #264653;
+}
+
+.playerP {
+  font-family: "Pacifico", cursive;
+  font-size: 18px;
+  color: #264653;
+}
+
+.playerP {
+  text-align: left;
+  margin-top: 24px;
+}
+
+.playerInput:focus {
+  outline: #f4a261;
+  border-color: #f4a261;
+  /* box-shadow: 0 0 3px #000; */
+}
+
