--- a/src/App.css
+++ b/src/App.css
@@ -180,9 +180,8 @@ h1 {
   bottom: 0px;
   left: 0;
   right: 0;
-  padding: 32px 24px;
+  padding: 32px 24px 16px;
   background-image: linear-gradient(180deg, rgba(255,255,255,0) 0, rgba(255,255,255,1) 100%, rgba(255,255,255,1) 100%);
-  /* look up linear gradient with multiple stops  */
 }
 
 #returnGreen {
@@ -215,3 +214,15 @@ h1 {
   /* box-shadow: 0 0 3px #000; */
 }
 
+/* round  */
+.roundContainer {
+  text-align: center;
+  height: 56px;
+  line-height: 56px;
+  background-color: #f4a261;
+  vertical-align: middle;
+}
+
+#roundNumber {
+  /* padding:   */
+}
