--- a/src/features/play_game/PlayGame.css
+++ b/src/features/play_game/PlayGame.css
@@ -1,14 +1,4 @@
-.roundContainer {
-    text-align: center;
-    height: 72px;
-    line-height: 72px;
-    background-color: #f4a261;
-    vertical-align: middle;
-}
-
-#roundNumber {
-    /* padding:   */
-}
+/* Joke Box  */
 
 .jokeContainer {
     display: flex;
@@ -35,3 +25,74 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+.viewJoke {
+    position: absolute;
+    bottom: -32px;
+    left: -8px;
+    right: -8px;
+    margin: 0 auto;
+    background-color: #E76F51;
+    background-image: url(../../images/eye-regular\ 1.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    cursor: pointer;
+    border: none;
+    border-radius: 50%;
+    height: 64px;
+    width: 64px;
+    box-shadow: 0px 0px 8px rgba(38, 70, 83, 0.50);
+}
+
+/* Player and Laugh Count  */
+
+.playerLaughCount {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 64px;
+}
+
+.playerLaughCountText {
+    color: #264653;
+    font-size: 24px;
+    font-family: "Pacifico", cursive;
+}
+
+.namesAndCount {
+ display: flex;
+ align-items: center;
+ margin-top: 16px;
+}
+
+.playerName {
+    color:#2A9D8F;
+    font-size: 24px;
+    font-family: "Quicksand", sans-serif;
+}
+
+.plusLaugh {
+    background: url(../../images/plus.png) no-repeat;
+    background-position: center;
+    cursor: pointer;
+    width: 10%;
+    height: 64px;
+    display: inline-block;
+    vertical-align: middle;
+  }
+
+  .laughNumber {
+    color:#2A9D8F;
+    font-size: 24px;
+    font-family: "Quicksand", sans-serif;
+  }
+  
+  .minusLaugh {
+    background: url(../../images/minus.png) no-repeat;
+    background-position: center;
+    cursor: pointer;
+    width: 10%;
+    height: 64px;
+    display: inline-block;
+    vertical-align: middle;
+    
+  }
