--- a/src/App.css
+++ b/src/App.css
@@ -159,6 +159,25 @@ p {
   font-family: "Pacifico", cursive;
 }
 
+h3 {
+  color: #fff;
+  font-size: 24px;
+  font-family: "Pacifico", cursive;
+}
+
+#whiteText {
+  color: #fff;
+}
+
+.bottomLink{
+  margin-top: 24px;
+  font-family: 'Quicksand', sans-serif;
+  margin-top: 24px;
+}
+
+
+/* Page layout  */
+
 .pageLayoutContainer {
   text-align: center;
   padding-bottom: 164px;
@@ -196,6 +215,11 @@ input {
 
 .inputNumber input {
   text-align: center;
+}
+
+/* Name Grid  */
+.nameList {
+  
 }
 
 /* Gradient Background  */
@@ -272,8 +296,8 @@ input {
   /* box-shadow: 0 0 3px #000; */
 }
 
-/* round  */
-.roundContainer {
+/* Orange Banner  */
+.orangeBanner {
   text-align: center;
   height: 56px;
   line-height: 56px;
