css styling 95 percent complete

--- a/src/features/play_game/PlayGame.css
+++ b/src/features/play_game/PlayGame.css
@@ -19,10 +19,19 @@
 #jokeDrop {
   font-size: 16px;
   height: 156px;
-  width: 80vw;
+}
+@media (min-width: 640px) {
+  .randomJoke {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+  #jokeDrop {
+    width: 400px;
+  }
 }
 
 .randomJoke {
+  width: 96%;
   padding: 16px;
   color: #fff;
   margin: 0;
@@ -53,11 +62,22 @@
   box-shadow: 0px 0px 8px rgba(38, 70, 83, 0.5);
 }
 
+/* Score content  */
+@media (min-width: 640px) {
+  .scoreContent {
+    width: 600px;
+    margin: 0 auto;
+  }
+}
+
 /* Player and Laugh Count  */
 
-
 .playerLaughCount {
-  margin-top: 64px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  padding-top: 72px;
 }
 
 .playerLaughCountText {
@@ -65,48 +85,57 @@
   font-size: 24px;
   font-family: "Pacifico", cursive;
 }
-.scoreBoard {
-  margin-top: 16px;
-}
 
-.scoreBoardName {
+/* ScoreBoard  */
+
+.scoreBoard {
   display: flex;
+  justify-content: space-between;
+  padding-top: 16px;
 }
 
 .playerName {
   color: #2a9d8f;
   font-size: 24px;
   font-family: "Quicksand", sans-serif;
+  display: flex;
+  flex: 1;
+  align-items: center;
 }
 
 .scoreBoardCount {
   display: flex;
-  align-items: center;
+  flex: 1;
   justify-content: flex-end;
+  align-items: center;
 }
 
 .plusLaugh {
   background: url(../../images/plus.png) no-repeat;
   background-position: center;
   cursor: pointer;
-  width: 10%;
   height: 64px;
-  display: inline-block;
-  vertical-align: middle;
+  width: 64px;
+
+  /* flex: .6; */
+  /* flex-basis: 0; */
 }
 
 .laughNumber {
   color: #2a9d8f;
   font-size: 24px;
   font-family: "Quicksand", sans-serif;
+  width: 32px;
+  /* flex: .6; */
+  /* flex-basis: 0; */
 }
 
 .minusLaugh {
   background: url(../../images/minus.png) no-repeat;
   background-position: center;
   cursor: pointer;
-  width: 10%;
+  width: 64px;
   height: 64px;
-  display: inline-block;
-  vertical-align: middle;
+  /* flex: .6; */
+  /* flex-basis: 0; */
 }
