--- a/src/App.css
+++ b/src/App.css
@@ -216,6 +216,12 @@ input {
   text-align: center;
 }
 
+@media (min-width: 640px) {
+  .pageLayoutContainer {
+    padding-bottom: 0px;
+  }
+}
+
 /* Desktop  */
 .desktopMaxWidth {
   max-width: 64rem;
@@ -251,7 +257,7 @@ input {
   border-style: none;
   font-family: "Pacifico", cursive;
   font-size: 24px;
-  padding: 8px 0px;
+  padding: 8px 16px;
   width: 100%;
 
   color: #ffffff;
@@ -266,10 +272,11 @@ input {
 
 .bottomButtons {
   position: fixed;
+  width: 100%;
   bottom: 0px;
   left: 0;
   right: 0;
-  padding: 32px 24px 32px;
+  padding: 32px 24px;
   background-image: linear-gradient(
     180deg,
     rgba(255, 255, 255, 0) 0,
@@ -284,7 +291,8 @@ input {
 
 @media (min-width: 640px) {
   .bottomButtons {
-    position: absolute;
+    position: relative;
+    /* margin-top: 64px; */
   }
 
   .orangeBtn {
@@ -292,7 +300,7 @@ input {
   }
 
   .bottomButtons {
-    padding: 48px 32px 48px 32px;
+    padding: 48px 32px 0px 32px;
   }
 }
 
