--- a/src/features/game_over/game_over.css
+++ b/src/features/game_over/game_over.css
@@ -14,22 +14,7 @@
     color: #fff;
 }
 
-.wrapper {
-    padding-top: 16px;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 10px;
-    /* grid-auto-rows: minmax(100px, auto); */
-  }
-  .one {
-    grid-column: 1 / 2;
-    grid-row: 1;
-  }
-  .two {
-    grid-column: 2 / 3;
-    grid-row: 1;
-  }
-  .three {
-    grid-column: 3 / 4;
-    grid-row: 1;
-  }
+.scoreBoard {
+  max-width: 600px;
+  margin: 0 auto;
+}
