--- a/src/features/intro/Intro.css
+++ b/src/features/intro/Intro.css
@@ -1,5 +1,6 @@
 .introContents {
     display: flex;
+    flex-direction: column;
     padding: 0px 24px 0px 24px;
     justify-content: center;
     align-items: center;
