--- a/src/App.css
+++ b/src/App.css
@@ -104,6 +104,11 @@ section {
 body {
   line-height: 1;
 }
+body,
+html {
+  width: 100%;
+  height: 100%;
+}
 ol,
 ul {
   list-style: none;
@@ -179,7 +184,6 @@ h3 {
 
 .pageLayoutContainer {
   text-align: center;
-  padding-bottom: 164px;
 }
 
 .pageContent {
@@ -239,15 +243,19 @@ input {
 /* Name Grid  */
 
 /* Gradient Background  */
-.gradientBack {
-  background-image: linear-gradient(#264653, #2a9d8f, #f4a261);
-}
 
 /* Background */
 .gradientBack {
+  background-image: linear-gradient(#264653, #2a9d8f, #f4a261);
   background-color: #000;
   text-align: center;
-  height: 100vh;
+  height: 100%;
+  min-height: 100%;
+  min-width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  overflow-y: scroll;
 }
 
 /* Buttons */
@@ -271,7 +279,6 @@ input {
 }
 
 .bottomButtons {
-  position: fixed;
   width: 100%;
   bottom: 0px;
   left: 0;
@@ -300,7 +307,7 @@ input {
   }
 
   .bottomButtons {
-    padding: 48px 32px 0px 32px;
+    padding: 48px 32px;
   }
 }
 
