--- a/src/features/play_game/PlayGame.css
+++ b/src/features/play_game/PlayGame.css
@@ -62,6 +62,10 @@
   box-shadow: 0px 0px 8px rgba(38, 70, 83, 0.5);
 }
 
+.viewJoke:hover {
+  background-color: #f4a360;
+}
+
 /* Score content  */
 @media (min-width: 640px) {
   .scoreContent {
