--- a/src/App.css
+++ b/src/App.css
@@ -1,140 +1,3 @@
-/* CSS Reset */
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block;
-}
-body {
-  line-height: 1;
-}
-body,
-html {
-  width: 100%;
-  height: 100%;
-}
-ol,
-ul {
-  list-style: none;
-}
-blockquote,
-q {
-  quotes: none;
-}
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: "";
-  content: none;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-body,
-html,
-* {
-  line-height: 1.5;
-  box-sizing: border-box;
-}
 
 label {
   font-family: "Pacifico", cursive;
@@ -152,7 +15,7 @@ h1 {
   font-family: "Pacifico", cursive;
 }
 
-p {
+p,input {
   font-size: 24px;
   font-family: "Quicksand", sans-serif;
   color: #264653;
@@ -184,6 +47,7 @@ h3 {
   color: #2a9d8f;
   font-size: 24px;
   font-family: "Quicksand", sans-serif;
+  border-radius: 6px;
 }
 
 /* Page layout  */
@@ -281,16 +145,6 @@ input {
   background-color: #f4a360;
   cursor: pointer;
 }
-.whiteLinkBtn {
-  color: #ffffff;
-  text-decoration: none;
-  font-family: "Quicksand", sans-serif;
-  font-size: 18px;
-}
-
-.whiteLinkBtn:hover {
-  color: #264653;
-}
 
 .bottomButtons {
   width: 100%;
@@ -304,17 +158,6 @@ input {
     rgba(255, 255, 255, 1) 100%,
     rgba(255, 255, 255, 1) 100%
   );
-}
-
-.returnGreen {
-  text-decoration: none;
-  font-family: "Quicksand", sans-serif;
-  font-size: 18px;
-  color: #2a9d8f;
-}
-
-.returnGreen:hover {
-  color: #264653;
 }
 
 @media (min-width: 640px) {
